feat(): added img to case